--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 bidict==0.21.4
 click==8.0.3
+dnspython==2.2.0
+eventlet==0.33.0
 Flask==2.0.3
 Flask-Login==0.5.0
 Flask-SocketIO==5.1.1
+gevent==21.12.0
+gevent-websocket==0.10.1
+greenlet==1.1.2
 gunicorn==20.1.0
 h11==0.13.0
 itsdangerous==2.0.1
@@ -11,5 +16,8 @@ MarkupSafe==2.0.1
 python-engineio==4.3.1
 python-socketio==5.5.2
 simple-websocket==0.5.1
+six==1.16.0
 Werkzeug==2.0.3
 wsproto==1.0.0
+zope.event==4.5.0
+zope.interface==5.4.0
