--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,10 @@ bidict==0.21.4
 click==8.0.3
 Flask==2.0.3
 Flask-SocketIO==5.1.1
-h11==0.13.0
+gunicorn==20.1.0
 itsdangerous==2.1.0
 Jinja2==3.0.3
 MarkupSafe==2.1.0
 python-engineio==4.3.1
 python-socketio==5.5.2
-simple-websocket==0.5.1
 Werkzeug==2.0.3
-wsproto==1.0.0
